--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,14 +12,10 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
-        - 7
-        - 8
+        - all
     - name: Ubuntu
       versions:
-        - precise
-        - trusty
-        - xenial
-        - bionic
+        - all
     - name: Debian
       versions:
         - all
