--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,28 +1,28 @@
 ---
 - name: Ensure dependencies are present.
-  apt:
+  ansible.builtin.apt:
     name:
       - apt-transport-https
       - gnupg2
     state: present
 
 - name: Add packagecloud.io Varnish apt key.
-  apt_key:
+  ansible.builtin.apt_key:
     url: https://packagecloud.io/varnishcache/{{ varnish_packagecloud_repo }}/gpgkey
     state: present
 
 - name: Add packagecloud.io Varnish apt repository.
-  apt_repository:
+  ansible.builtin.apt_repository:
     repo: "{{ varnish_apt_repo }}"
     state: present
 
 - name: Ensure Varnish is installed.
-  apt:
+  ansible.builtin.apt:
     name: "{{ varnish_package_name }}"
     state: present
 
 - name: Ensure old role-managed Varnish systemd unit file is removed.
-  file:
+  ansible.builtin.file:
     path: /etc/systemd/system/varnish.service
     state: absent
   when: varnish_systemd_config_path != '/etc/systemd/system'
