--- a/molecule/default/setup.yml
+++ b/molecule/default/setup.yml
@@ -1,7 +1,7 @@
 ---
-- name: Update apt cache.
-  apt: update_cache=true cache_valid_time=600
-  when: ansible_os_family == 'Debian'
+# - name: Update apt cache.
+#   apt: update_cache=true cache_valid_time=600
+#   when: ansible_os_family == 'Debian'
 
 - name: Ensure build dependencies are installed (RedHat 7+).
   yum:
