--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ name: Release
 
 defaults:
   run:
-    working-directory: 'geerlingguy.varnish'
+    working-directory: 'buluma.varnish'
 
 jobs:
 
@@ -24,7 +24,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v3
         with:
-          path: 'geerlingguy.varnish'
+          path: 'buluma.varnish'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v3.1.0
