--- a/molecule/default/version-41.yml
+++ b/molecule/default/version-41.yml
@@ -10,7 +10,7 @@
     - import_tasks: setup.yml
 
   roles:
-    - role: geerlingguy.varnish
+    - role: buluma.varnish
 
   post_tasks:
     - name: Check the installed Ansible version.
