--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -7,7 +7,7 @@
     - import_tasks: setup.yml
 
   roles:
-    - role: buluma.varnish
+    - role: ansible-role-varnish
 
   post_tasks:
     - name: Check the installed Varnish version.
