--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -4,7 +4,7 @@
   become: true
 
   pre_tasks:
-    - import_tasks: setup.yml
+    # - import_tasks: setup.yml
 
   roles:
     - role: ansible-role-varnish
