--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,6 +5,8 @@
   become: yes
 
   roles:
+    - role: ansible-role-bootstrap
+    - role: ansible-role-systemd
     - role: ansible-role-varnish
 
   tasks:
