--- a/requirements.yml
+++ b/requirements.yml
@@ -2,5 +2,6 @@
 roles:
   - name: buluma.bootstrap
   - name: buluma.systemd
+  - name: buluma.core_dependencies
 collections:
   - name: community.general
