--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,16 +1,21 @@
 ---
-- name: Ensure Varnish dependency is installed.
+- name: ensure varnish dependency is installed.
   ansible.builtin.yum:
     name: yum-utils
     state: present
 
-- name: Ensure extra Varnish dependency on older RHEL versions is installed.
+- name: ensure varnish dependency (libjemalloc.so.1()(64bit)) is installed.
+  ansible.builtin.yum:
+    name: libjemalloc.so.1()(64bit)
+    state: present
+
+- name: ensure extra varnish dependency on older RHEL versions is installed.
   ansible.builtin.yum:
     name: pygpgme
     state: present
   when: ansible_distribution_major_version | int < 8
 
-- name: Add Varnish packagecloud.io yum repo.
+- name: add Varnish packagecloud.io yum repo.
   ansible.builtin.yum_repository:
     name: varnishcache_{{ varnish_packagecloud_repo }}
     description: Varnish Cache packagecloud.io repository.
@@ -24,7 +29,7 @@
     priority: "{{ varnish_packagecloud_repo_yum_repository_priority }}"
   register: varnish_packagecloud_repo_addition
 
-- name: Refresh yum metadata cache if repo changed.
+- name: refresh yum metadata cache if repo changed.
   command: >
     yum -q makecache -y --disablerepo='*' --enablerepo='varnishcache_{{ varnish_packagecloud_repo }}'
   args:
@@ -32,7 +37,7 @@
   when: varnish_packagecloud_repo_addition.changed
   tags: ['skip_ansible_lint']
 
-- name: Disable varnish AppStream in RHEL 8.
+- name: disable varnish AppStream in RHEL 8.
   command: dnf module disable -y varnish
   args:
     warn: false
@@ -41,7 +46,7 @@
     - ansible_distribution_major_version | int == 8
   tags: ['skip_ansible_lint']
 
-- name: Ensure Varnish is installed.
+- name: ensure Varnish is installed.
   ansible.builtin.yum:
     name: "{{ varnish_package_name }}"
     state: present
