--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -11,11 +11,11 @@
     - role: ansible-role-varnish
 
   tasks:
-    - name: Update apt cache.
+    - name: update apt cache.
       apt: update_cache=true cache_valid_time=600
       when: ansible_os_family == 'Debian'
 
-    - name: Ensure build dependencies are installed (RedHat 7+).
+    - name: ensure build dependencies are installed (RedHat 7+).
       yum:
         name:
           - logrotate
@@ -25,7 +25,7 @@
         - ansible_os_family == 'RedHat'
         - ansible_distribution_major_version >= '7'
 
-    - name: Ensure build dependencies are installed (RedHat < 7).
+    - name: ensure build dependencies are installed (RedHat < 7).
       yum:
         name: logrotate
         state: present
@@ -33,5 +33,5 @@
         - ansible_os_family == 'RedHat'
         - ansible_distribution_major_version < '7'
 
-    - name: Ensure curl is installed.
+    - name: ensure curl is installed.
       package: name=curl state=present
