--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -50,6 +50,16 @@ jobs:
             tag: "latest"
           - image: "debian-systemd"
             tag: "bookworm"
+          - image: "fedora-systemd"
+            tag: "34"
+          - image: "fedora-systemd"
+            tag: "latest"
+          - image: "amazonlinux"
+            tag: "1"
+          - image: "amazonlinux"
+            tag: "latest"
+          - image: "archlinux"
+            tag: "latest"
     steps:
       - name: checkout
         uses: actions/checkout@v3
