--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -16,7 +16,7 @@
       when: ansible_os_family == 'Debian'
 
     - name: ensure build dependencies are installed (RedHat 7+).
-      yum:
+      ansible.builtin.yum:
         name:
           - logrotate
           - systemd-sysv
@@ -26,7 +26,7 @@
         - ansible_distribution_major_version >= '7'
 
     - name: ensure build dependencies are installed (RedHat < 7).
-      yum:
+      ansible.builtin.yum:
         name: logrotate
         state: present
       when:
