--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,22 +14,20 @@ molecule:
   retry: 1
   parallel:
     matrix:
-      - image: "centos-systemd"
-        tag: "7"
-      - image: "docker-ubuntu-systemd"
-        tag: "latest"
-      - image: "docker-ubuntu-systemd"
+      - image: "ubuntu"
         tag: "bionic"
-      - image: "docker-ubuntu-systemd"
+      - image: "ubuntu"
         tag: "focal"
-      - image: "debian-systemd"
+      - image: "debian"
+        tag: "buster"
+      - image: "debian"
+        tag: "stretch"
+      - image: "debian"
+        tag: "bullseye"
+      - image: "enterpriselinux"
         tag: "latest"
-      - image: "debian-systemd"
-        tag: "bookworm"
-      - image: "fedora-systemd"
-        tag: "34"
-      - image: "fedora-systemd"
-        tag: "latest"
+      - image: "enterpriselinux"
+        tag: "7"
 
 testing:
   script:
