--- a/requirements.yml
+++ b/requirements.yml
@@ -3,5 +3,6 @@ roles:
   - name: buluma.bootstrap
   - name: buluma.systemd
   - name: buluma.core_dependencies
+  - name: buluma.httpd
 collections:
   - name: community.general
