--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -9,13 +9,13 @@
 
 - name: Import Jemalloc EPEL GPG key.
   rpm_key:
-    key: "{{ varnish_repo_gpg_key_url }}"
-    state: present
+     key: "{{ varnish_repo_gpg_key_url }}"
+     state: present
   register: result
   until: result is succeeded
   retries: 5
   delay: 10
-  when: not epel_repofile_result.stat.exists
+  # when: not epel_repofile_result.stat.exists
   ignore_errors: "{{ ansible_check_mode }}"
 
 - name: install jemalloc package.
