--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,33 +1,9 @@
 ---
-- name: copy jemalloc rpm file to server
-  ansible.builtin.copy:
-     # src: http://download-ib01.fedoraproject.org/pub/epel/$releasever/$basearch/
-     src: https://download-ib01.fedoraproject.org/pub/epel/7/x86_64/Packages/j/jemalloc-3.6.0-1.el7.x86_64.rpm
-     dest: /tmp/jemalloc-3.6.0-1.el7.x86_64.rpm
-     mode: 0644
-     remote_src: yes
-
-- name: Import Jemalloc EPEL GPG key.
-  rpm_key:
-     key: "{{ varnish_repo_gpg_key_url }}"
-     state: present
-  register: result
-  until: result is succeeded
-  retries: 5
-  delay: 10
-  # when: not epel_repofile_result.stat.exists
-  ignore_errors: "{{ ansible_check_mode }}"
-
-- name: install jemalloc package.
-  ansible.builtin.yum:
-     name: /tmp/jemalloc-3.6.0-1.el7.x86_64.rpm
-     state: present
-
 - name: ensure varnish dependency is installed.
   ansible.builtin.yum:
      name:
         - yum-utils
-        - jemalloc
+        # - jemalloc
      state: present
 
 - name: ensure extra varnish dependency on older RHEL versions is installed.
