--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,6 +1,13 @@
 ---
 - name: reload systemd
-  systemd: daemon-reload=true
+  systemd: daemon_reload=true
 
 - name: restart varnish
   service: name=varnish state=restarted
+  ignore_errors: yes
+
+- name: restart service cron on centos, in all cases, also issue daemon-reload to pick up config changes
+  systemd:
+    state: restarted
+    daemon_reload: yes
+    name: varnish
