--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -36,30 +36,16 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "enterpriselinux"
-            tag: "7"
-          - image: "enterpriselinux"
-            tag: "latest"
-          - image: "docker-ubuntu-systemd"
-            tag: "latest"
-          - image: "docker-ubuntu-systemd"
+          - image: "ubuntu"
             tag: "bionic"
-          - image: "docker-ubuntu-systemd"
+          - image: "ubuntu"
             tag: "focal"
-          - image: "debian-systemd"
-            tag: "latest"
-          - image: "debian-systemd"
-            tag: "bookworm"
-          - image: "fedora-systemd"
-            tag: "34"
-          - image: "fedora-systemd"
-            tag: "latest"
-          - image: "amazonlinux"
-            tag: "1"
-          - image: "amazonlinux"
-            tag: "latest"
-          - image: "archlinux"
-            tag: "latest"
+          - image: "debian"
+            tag: "buster"
+          - image: "debian"
+            tag: "stretch"
+          - image: "debian"
+            tag: "bullseye"
     steps:
       - name: checkout
         uses: actions/checkout@v3
