--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -4,7 +4,8 @@
 
 - name: restart varnish
   ansible.builtin.service: name=varnish state=restarted
-  ignore_errors: yes
+  changed_when: no
+  failed_when: no
 
 - name: restart service cron on centos, in all cases, also issue daemon-reload to pick up config changes
   ansible.builtin.systemd:
