--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,24 +10,13 @@ galaxy_info:
   license: "Apache-2.0"
   min_ansible_version: 2.5
   platforms:
-    - name: EL
-      versions:
-        - all
     - name: Ubuntu
       versions:
-        - all
+        - focal
+        - bionic
     - name: Debian
       versions:
-        - all
-    - name: Fedora
-      versions:
-        - all
-    - name: Amazon
-      versions:
-        - all
-    - name: Archlinux
-      versions:
-        - all
+        - bullseye
   galaxy_tags:
     - web
     - varnish
