--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -10,7 +10,7 @@ on:
   schedule:
     - cron: '43 22 * * *'
   workflow_dispatch:
-  push: {branches: ["master", "main", "testing"]}
+  push: {branches: ["master", "main"]}
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
@@ -36,16 +36,12 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "ubuntu"
-            tag: "bionic"
-          - image: "ubuntu"
+          - image: "docker-ubuntu-systemd"
             tag: "focal"
-          - image: "debian"
-            tag: "buster"
-          - image: "debian"
-            tag: "stretch"
-          - image: "debian"
-            tag: "bullseye"
+          - image: "docker-ubuntu-systemd"
+            tag: "bionic"
+          - image: "debian-systemd"
+            tag: "latest"
     steps:
       - name: checkout
         uses: actions/checkout@v3
