--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,12 +3,11 @@ dependencies: []
 
 galaxy_info:
   role_name: varnish
-  author: Michael Buluma
-  namespace: buluma
+  author: buluma
   description: Varnish for Linux.
   company: "ShadowNet"
   license: "Apache-2.0"
-  min_ansible_version: 2.5
+  min_ansible_version: "2.12"
   platforms:
     - name: Ubuntu
       versions:
