--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,27 +1,27 @@
 ---
-- name: ensure dependencies are present.
+- name: setup-Debian | Ensure dependencies are present.
   ansible.builtin.apt:
     name:
       - apt-transport-https
       - gnupg2
     state: present
 
-- name: add packagecloud.io varnish apt key.
+- name: setup-Debian | Add packagecloud.io varnish apt key.
   ansible.builtin.apt_key:
     url: https://packagecloud.io/varnishcache/{{ varnish_packagecloud_repo }}/gpgkey
     state: present
 
-- name: add packagecloud.io varnish apt repository.
+- name: setup-Debian | Add packagecloud.io varnish apt repository.
   ansible.builtin.apt_repository:
     repo: "{{ varnish_apt_repo }}"
     state: present
 
-- name: ensure varnish is installed.
+- name: setup-Debian | Ensure varnish is installed.
   ansible.builtin.apt:
     name: "{{ varnish_package_name }}"
     state: present
 
-- name: ensure old role-managed varnish systemd unit file is removed.
+- name: setup-Debian | Ensure old role-managed varnish systemd unit file is removed.
   ansible.builtin.file:
     path: /etc/systemd/system/varnish.service
     state: absent
