--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,13 +1,13 @@
 ---
-- name: reload systemd
+- name: Reload systemd
   ansible.builtin.systemd: daemon_reload=true
 
-- name: restart varnish
+- name: Restart varnish
   ansible.builtin.service: name=varnish state=restarted
   changed_when: no
   failed_when: no
 
-- name: restart service cron on centos, in all cases, also issue daemon-reload to pick up config changes
+- name: Restart service cron on centos
   ansible.builtin.systemd:
     state: restarted
     daemon_reload: yes
