--- a/meta/main.yml
+++ b/meta/main.yml
@@ -13,6 +13,7 @@ galaxy_info:
       versions:
         - focal
         - bionic
+        - jammy
     - name: Debian
       versions:
         - bullseye
