Update Action containers.

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -51,6 +51,8 @@ jobs:
             tag: "focal"
           - image: "docker-ubuntu-systemd"
             tag: "bionic"
+          - image: "docker-ubuntu-systemd"
+            tag: "latest"
           - image: "debian-systemd"
             tag: "bullseye"
     steps:
@@ -59,7 +61,7 @@ jobs:
         with:
           path: "${{ github.repository }}"
       - name: Running Molecule Test
-        uses: buluma/molecule-action@v6.0.3
+        uses: buluma/molecule-action@v24.2.0
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
