--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -46,20 +46,13 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - image: "docker-ubuntu-systemd"
+          - image: "docker-molecule-images"
             tag: "focal"
-          - image: "docker-ubuntu-systemd"
+          - image: "docker-molecule-images"
             tag: "bionic"
-<<<<<<< HEAD
-          - image: "docker-ubuntu-systemd"
-            tag: "latest"
-          - image: "docker-ubuntu-systemd"
-            tag: "lunar"
-          - image: "docker-ubuntu-systemd"
-            tag: "noble"
-=======
->>>>>>> 6c7e2d686024a283e85ab543f76f1de6b91c932f
-          - image: "debian-systemd"
+          - image: "docker-molecule-images"
+            tag: "jammy"
+          - image: "docker-molecule-images"
             tag: "bullseye"
     steps:
       - name: Checkout Role
@@ -71,6 +64,8 @@ jobs:
         with:
           image: ${{ matrix.config.image }}
           tag: ${{ matrix.config.tag }}
+      - name: Running Role Test
+        run: ansible-galaxy role import --api-key ${{ secrets.galaxy_api_key }} buluma ${{ github.event.repository.name }}
 
   dependabot:
     needs:
