--- a/tasks/setup-RedHat.yml
+++ b/tasks/setup-RedHat.yml
@@ -1,49 +1,43 @@
 ---
-- name: setup-RedHat | Ensure varnish dependency is installed.
+- name: setup-RedHat | Ensure Varnish dependency is installed.
   ansible.builtin.yum:
-     name:
-        - yum-utils
-        # - jemalloc
-     state: present
+    name: yum-utils
+    state: present
 
-- name: setup-RedHat | Ensure extra varnish dependency on older RHEL versions is installed.
+- name: setup-RedHat | Ensure extra Varnish dependency on older RHEL versions is installed.
   ansible.builtin.yum:
-     name: pygpgme
-     state: present
+    name: pygpgme
+    state: present
   when: ansible_distribution_major_version | int < 8
 
-- name: setup-RedHat | Add varnish packagecloud.io yum repo.
+- name: setup-RedHat | Add Varnish packagecloud.io yum repo.
   ansible.builtin.yum_repository:
-     name: varnishcache_{{ varnish_packagecloud_repo }}
-     description: Varnish Cache packagecloud.io repository.
-     baseurl: "{{ varnish_yum_repo_baseurl }}"
-     repo_gpgcheck: false
-     gpgcheck: false
-     enabled: true
-     gpgkey: https://packagecloud.io/varnishcache/{{ varnish_packagecloud_repo }}/gpgkey
-     sslverify: 1
-     sslcacert: /etc/pki/tls/certs/ca-bundle.crt
-     priority: "{{ varnish_packagecloud_repo_yum_repository_priority }}"
+    name: varnishcache_{{ varnish_packagecloud_repo }}
+    description: Varnish Cache packagecloud.io repository.
+    baseurl: "{{ varnish_yum_repo_baseurl }}"
+    module_hotfixes: true
+    repo_gpgcheck: false
+    gpgcheck: false
+    enabled: true
+    gpgkey: https://packagecloud.io/varnishcache/{{ varnish_packagecloud_repo }}/gpgkey
+    sslverify: 1
+    sslcacert: /etc/pki/tls/certs/ca-bundle.crt
+    priority: "{{ varnish_packagecloud_repo_yum_repository_priority }}"
   register: varnish_packagecloud_repo_addition
 
 - name: setup-RedHat | Refresh yum metadata cache if repo changed.
-  command: >
+  ansible.builtin.command: >
     yum -q makecache -y --disablerepo='*' --enablerepo='varnishcache_{{ varnish_packagecloud_repo }}'
-  args:
-     warn: false
   when: varnish_packagecloud_repo_addition.changed
   tags: ['skip_ansible_lint']
 
-- name: setup-RedHat | Disable varnish appStream in RHEL 8.
-  command: dnf module disable -y varnish
-  args:
-     warn: false
-  when:
-     - varnish_packagecloud_repo_addition.changed
-     - ansible_distribution_major_version | int == 8
-  tags: ['skip_ansible_lint']
-
-- name: setup-RedHat | Ensure varnish is installed.
+- name: setup-RedHat | Ensure Varnish is installed.
   ansible.builtin.yum:
-     name: "{{ varnish_package_name }}"
-     state: present
+    name: "{{ varnish_package_name }}"
+    state: present
+
+- name: setup-RedHat | Ensure Varnish VMODs are installed.
+  ansible.builtin.yum:
+    name: "{{ varnish_modules_package_name }}"
+    state: present
+  when: varnish_modules_package_name
