--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,7 +3,7 @@
   hosts: all
   become: true
   vars:
-    varnish_apt_use_packagecloud: true
+    varnish_apt_use_packagecloud: false
   pre_tasks:
     - name: Update apt cache.
       apt: update_cache=true cache_valid_time=600
