--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 varnish_package_name: "varnish"
 varnish_modules_package_name: ""
-varnish_version: "6.6"
+varnish_version: "7.5"
 
 varnish_use_default_vcl: true
 varnish_default_vcl_template_path: default.vcl.j2
@@ -36,7 +36,8 @@ varnish_packagecloud_repo_yum_repository_priority: "1"
 varnish_yum_repo_baseurl: "https://packagecloud.io/varnishcache/{{ varnish_packagecloud_repo }}/el/{{ ansible_distribution_major_version|int }}/$basearch"
 
 # Only used on Debian / Ubuntu.
-varnish_apt_repo: "deb https://packagecloud.io/varnishcache/{{ varnish_packagecloud_repo }}/{{ ansible_distribution | lower }}/ {{ ansible_distribution_release }} main"
+varnish_apt_repo: "deb https://packagecloud.io/varnishcache/{{ varnish_packagecloud_repo }}/packages/{{ ansible_distribution | lower }}/ {{ ansible_distribution_release }} main"
+# deb https://packagecloud.io/varnishcache/varnish60lts/$ID/ $VERSION_CODENAME main
 
 # Optionally define additional backends.
 # varnish_backends:
