--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -12,7 +12,6 @@ on:
       - main
       - testing
       - dependabot/**
-      # - renovate/**
     paths-ignore:
       - '**/README.md'
       - '**/CHANGELOG.md'
@@ -21,8 +20,7 @@ on:
   pull_request:
   pull_request_target:
   schedule:
-    # - cron: '43 22 22 * *'
-    - cron: '43 22 * * *'
+    - cron: '43 22 22/22 * *'
 
   workflow_dispatch:
 
@@ -36,10 +34,10 @@ jobs:
   lint:
     runs-on: ubuntu-20.04
     steps:
-      - name: checkout
+      - name: Checkout Role
         uses: actions/checkout@v4
-      - name: ansible-lint
-        uses: ansible-community/ansible-lint-action@main
+      - name: Run Ansible-lint
+        uses: ansible/ansible-lint@v24.7.0
   test:
     needs:
       - lint
@@ -54,6 +52,8 @@ jobs:
             tag: "bionic"
           - image: "docker-molecule-images"
             tag: "jammy"
+          - image: "docker-molecule-images"
+            tag: "noble"
           - image: "docker-molecule-images"
             tag: "bullseye"
     steps:
