--- a/meta/main.yml
+++ b/meta/main.yml
@@ -14,6 +14,7 @@ galaxy_info:
         - focal
         - bionic
         - jammy
+        - noble
     - name: Debian
       versions:
         - bullseye
