--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -9,7 +9,7 @@
 
 - name: Set the packagecloud repository name based on the version.
   ansible.builtin.set_fact:
-    varnish_packagecloud_repo: "varnish{{ varnish_version|replace('.', '') }}"
+    varnish_packagecloud_repo: "varnish{{ varnish_version | replace('.', '') }}"
 
 - name: Include RedHat setup
   ansible.builtin.include_tasks: setup-RedHat.yml
@@ -23,7 +23,7 @@
   ansible.builtin.file:
     path: "{{ varnish_config_path }}"
     state: directory
-    mode: 0755
+    mode: "0755"
 
 - name: Copy Varnish configuration (sysvinit).
   ansible.builtin.template:
@@ -31,7 +31,7 @@
     dest: "{{ varnish_sysvinit_config_path }}/varnish"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   when: >
     (ansible_os_family == 'RedHat' and ansible_distribution_major_version|int < 7) or
     (ansible_os_family == 'Debian' and ansible_distribution_release != "xenial")
@@ -43,7 +43,7 @@
     dest: "{{ varnish_systemd_config_path }}/varnish.service"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   when: >
     (ansible_os_family == 'RedHat' and ansible_distribution_major_version|int >= 7) or
     (ansible_distribution == 'Debian' and ansible_distribution_version|int >= 8) or
@@ -58,7 +58,7 @@
     dest: "{{ varnish_config_path }}/varnish.params"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   when: >
     (ansible_os_family == 'RedHat' and ansible_distribution_major_version|int >= 7) or
     (ansible_os_family == 'Debian' and ansible_distribution_release == "xenial")
@@ -69,7 +69,7 @@
     dest: "{{ varnish_config_path }}/default.vcl"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   when: varnish_use_default_vcl
   notify: Restart varnish
 
@@ -79,7 +79,7 @@
     dest: "{{ varnish_config_path }}/secret"
     owner: root
     group: root
-    mode: 0644
+    mode: "0644"
   notify: Restart varnish
 
 - name: Ensure varnish services are started and enabled on startup.
