--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -40,4 +40,4 @@
     - role: buluma.systemd
       systemd_default_target: multi-user.target
     - role: buluma.httpd
-    - role: ansible-role-varnish
+    - role: buluma.varnish
