Update files using ansible-generator

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -5,4 +5,4 @@
 repository:
   description: Varnish for Linux.
   homepage: https://buluma.github.io/
-  topics: web, varnish, cache, proxy, reverse, performance, loadbalancer, balancer, ansible, molecule, tox, playbook
+  topics: web, varnish, cache, proxy, reverse, performance, loadbalancer, balancer, ansible, molecule, playbook
