--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,28 +1,24 @@
----
 dependencies: []
-
 galaxy_info:
   role_name: varnish
   author: buluma
   description: Varnish for Linux.
-  company: "ShadowNet"
-  license: "Apache-2.0"
-  min_ansible_version: "2.12"
+  company: ShadowNet
+  license: Apache-2.0
+  min_ansible_version: '2.12'
   platforms:
-    - name: Ubuntu
-      versions:
-        - focal
-        - jammy
-        - noble
-    - name: Debian
-      versions:
-        - bullseye
+  - name: Ubuntu
+    versions:
+    - all
+  - name: Debian
+    versions:
+    - all
   galaxy_tags:
-    - web
-    - varnish
-    - cache
-    - proxy
-    - reverse
-    - performance
-    - loadbalancer
-    - balancer
+  - web
+  - varnish
+  - cache
+  - proxy
+  - reverse
+  - performance
+  - loadbalancer
+  - balancer
