--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -41,11 +41,13 @@ jobs:
       matrix:
         distro:
           - image: "docker-molecule-images"
-            tag: "latest"
+            tag: "plucky"
+          - image: "docker-molecule-images"
+            tag: "ubuntu_latest"
           - image: "docker-molecule-images"
             tag: "jammy"
           - image: "docker-molecule-images"
-            tag: "latest"
+            tag: "debian_latest"
           - image: "docker-molecule-images"
             tag: "bookworm"
           - image: "docker-molecule-images"
