--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,20 +6,20 @@ galaxy_info:
   description: Varnish for Linux.
   company: ShadowNet
   license: Apache-2.0
-  min_ansible_version: '2.12'
+  min_ansible_version: "2.12"
   platforms:
     - name: Ubuntu
       versions:
         - all
-  - name: Debian
-    versions:
-    - all
+    - name: Debian
+      versions:
+        - all
   galaxy_tags:
     - web
-  - varnish
-  - cache
-  - proxy
-  - reverse
-  - performance
-  - loadbalancer
-  - balancer
+    - varnish
+    - cache
+    - proxy
+    - reverse
+    - performance
+    - loadbalancer
+    - balancer
